--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Peña El Crucero</h1>
         <div class="tabs">
-            <button class="tab-link tab-link-comida" onclick="openTab('comida')">COMIDA</button>
+            <button class="tab-link tab-link-comida tab-selected" onclick="openTab('comida')">COMIDA</button>
             <button class="tab-link tab-link-bebida" onclick="openTab('bebida')">BEBIDA</button>
         </div>
         <div id="comida" class="tab-content">
