--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parral 2024</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/x-icon" href="logo.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="logo2.png" />
 </head>
 <body>
     <div class="container">
-        <h1>Peña El Crucero</h1>
+        <div class="branding">
+            <img src="logo2.png" alt="Logo" class="logo">
+            <h2>Peña El Crucero</h2>
+            <img src="logo2.png" alt="Logo" class="logo">
+        </div>
         <div class="tabs">
             <button class="tab-link tab-link-comida tab-selected" onclick="openTab('comida')">COMIDA</button>
             <button class="tab-link tab-link-bebida" onclick="openTab('bebida')">BEBIDA</button>
