--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parral 2024</title>
+    <title>Peña El Crucero - Parral 2024</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="logo2.png" />
 </head>
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="branding">
             <img src="logo2.png" alt="Logo" class="logo">
-            <h2>Peña El Crucero</h2>
+            <h2>Peña El Cruceroooo</h2>
             <img src="logo2.png" alt="Logo" class="logo">
         </div>
         <div class="tabs">
