--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="branding">
             <img src="logo2.png" alt="Logo" class="logo">
-            <h2>Peña El Cruceroooo</h2>
+            <h2>Peña El Crucero</h2>
             <img src="logo2.png" alt="Logo" class="logo">
         </div>
         <div class="tabs">
