--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="text" class="payment-input payment-amount" style="color: #1e3d59;" id="payment-input" oninput="calculateChange()" pattern="[0-9]*">
             </div>
             <div class="payment-info">
-                <div class="payment-label change-amount" style="color: #5cb85c;">Vueltas:</div>
+                <div class="payment-label change-amount" style="color: #5cb85c;">Vueltas</div>
                 <div class="payment-amount change-amount" id="change-amount">0.00€</div>
             </div>
             <button id="reset-button" onclick="resetQuantities()">Borrar</button>
