--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parral 2024</title>
+    <title>Parral 2025</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="logo2.png" />
 </head>
@@ -31,7 +31,7 @@
             </div>
             <div class="payment-info">
                 <div class="payment-label payment-amount" style="color: #1e3d59;">Pago</div>
-                <input type="text" class="payment-input payment-amount" style="color: #1e3d59;" id="payment-input" oninput="calculateChange()" pattern="[0-9]*">
+                <input type="number" class="payment-input payment-amount" style="color: #1e3d59;" id="payment-input" oninput="calculateChange()" pattern="[0-9]*">
             </div>
             <div class="payment-info">
                 <div class="payment-label change-amount" style="color: #5cb85c;">Vueltas</div>
